# MyXen-Foundation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRESALE_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  WIKI_PAGES_CREATED.md  bootstrap.sh  chore(initial-scaffold): add monorepo structure, OpenAPI bundle, Laravel locker starter, CI & docker-compose  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-mobile.yml  codeql.yml  presale-ci.yml
anchor-presale/: Anchor.toml  README.md  VALIDATION_REPORT.md  package-lock.json  package.json  sale-config.json  test-flow.js
anchor-presale/app/: BuyTokens.tsx  package-lock.json  package.json  tsconfig.json
anchor-presale/app/public/: index.html
anchor-presale/app/src/: App.tsx  BuyTokens.tsx  (+3 more)
anchor-presale/programs/anchor-presale/: Cargo.toml
anchor-presale/programs/anchor-presale/src/: lib.rs
anchor-presale/scripts/: initialize-sale.js  initialize-sale.ts
anchor-presale/tests/: presale.test.ts
backend/: .env.example  composer.json
backend/bootstrap/: app.php
backend/config/: app.php  blockchain.php  database.php  horizon.php  kyc.php  l5-swagger.php  sanctum.php  solana.php
backend/routes/: api.php  web.php
docs/: openapi.yaml
examples/: curl_examples.sh  httpie_examples.sh  postman_collection.json
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
mobile/: .env.example  .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart
scripts/: bootstrap-laravel.sh  deploy-presale-devnet.sh  generate-voucher-keypair.sh
services/api/: .env.example
services/payments/: README.md
(+254 files in other folders)
