[package]
name = "anchor-presale"
version = "0.1.0"
description = "Solana token presale with vesting and voucher-based purchases"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))'
] }
